# brassboard-seq

./: .gitignore  CMakeLists.txt  codecov.yml
.github/: 0001-Set-module-initialization-trace-context-to-the-corre.patch
.github/workflows/: deploy.yml  ubuntu.yml
benchmarks/: bench_parampack.py  bench_rtval.py  bench_rtval_eval.py  bench_seq.py  bench_seq_backtrace.py  bench_seq_compile.py
brassboard_seq/: CMakeLists.txt  __init__.py  _utils.cpp  action.cpp  action.pxd  action.pyx  artiq_backend.cpp  artiq_backend.pxd  artiq_backend.pyx  backend.cpp  backend.pxd  backend.pyx  config.cpp  config.pxd  config.pyx  event_time.cpp  event_time.pxd  event_time.pyx  rfsoc_backend.cpp  rfsoc_backend.pxd  rfsoc_backend.pyx  rtval.cpp  rtval.pxd  rtval.pyx  scan.cpp  scan.pxd  scan.pyx  seq.cpp  seq.pxd  seq.pyx  utils.cpp  utils.pxd  yaml.cpp  yaml.pxd  yaml.pyx
brassboard_seq/src/: _rfsoc_backend.cpp  action.cpp  action.h  artiq_backend.cpp  artiq_backend.h  artiq_utils.cpp  artiq_utils.h  backend.cpp  backend.h  config.cpp  config.h  event_time.cpp  event_time.h  init.cpp  lib_rtval.cpp  lib_rtval.h  parampack.cpp  rfsoc.cpp  rfsoc.h  rfsoc_backend.cpp  rfsoc_backend.h  rfsoc_gen.cpp  rfsoc_gen.h  rtprop.cpp  rtprop.h  rtval.cpp  rtval.h  rtval_interp.h  scan.cpp  scan.h  seq.cpp  seq.h  utils.cpp  utils.h  yaml.cpp  yaml.h
cmake/: PythonMacros.cmake  cmake-python-helper.py  fix-deps-file.py
scripts/: fix_cython_c_path.sh
src/: artiq_backend.cpp
tests/: CMakeLists.txt  brassboard_seq_artiq_backend_utils.cpp  brassboard_seq_artiq_backend_utils.pyx  brassboard_seq_rfsoc_backend_utils.cpp  brassboard_seq_rfsoc_backend_utils.pyx  brassboard_seq_seq_utils.cpp  brassboard_seq_test_utils.cpp  brassboard_seq_test_utils.pyx  check_artiq_backend.py  conftest.py  dummy_artiq.py  dummy_pulse_compiler.py  py_test_utils.py  rfsoc_test_utils.py  test_action.py  test_artiq_backend.py  test_artiq_backend_dma.py  test_artiq_backend_dma_nodax.py  test_artiq_backend_nodax.py  test_backend.py  test_bits.py  test_config.py  test_event_time.py  test_max_range.py  test_rfsoc_backend.py  test_rfsoc_backend_jv1.py  test_rfsoc_backend_jv1_3.py  test_rfsoc_common.py  test_rfsoc_jv1.py  test_rfsoc_jv1_3.py  test_rtval.py  test_scan.py  test_scan_no_yaml.py  test_seq.py  test_seq_compile.py  test_stream.py  test_suffix_array.py  test_utils.cpp  test_utils.h  test_utils.py  (+1 more)
